# sc-agent

./: .env.example  .gitignore  .mcp.json  README.md  download_model.sh  environment.yml  pyproject.toml  setup.sh  start_vllm.sh  test_agent.py
run_2026_03_31_155717/: manifest.json
run_2026_03_31_155717/code/: Set_Leiden_clustering_labels_from_the_0_5_resoluti.py
scagent/: __init__.py  cli.py  terminal.py
scagent/agent/: __init__.py  agent.py  codex_bridge.py  decision_policy.py  prompts.py  returns.py  run_manager.py  tools.py  world_state.py
scagent/analysis/: __init__.py  cluster_confidence.py  context.py  deg.py  interpretation.py  literature.py
scagent/annotation/: __init__.py  celltypist.py  scimilarity.py
scagent/batch/: __init__.py  bbknn.py  entropy.py  harmony.py  scanorama.py  scib.py  scvi.py
scagent/config/: __init__.py  defaults.py
scagent/core/: __init__.py  clustering.py  dimred.py  inspector.py  io.py  normalization.py  qc.py
scagent/mcp/: __init__.py  client.py
